--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {    
     "test": "mocha --timeout 60000 --exit -r @babel/register test/**/*.spec.js",
-    "compile": "babel src --out-dir dist --source-maps --watch"
+    "compile": "babel src --out-dir dist --source-maps",
+    "deploy": "npm publish"
   },
   "repository": {
     "type": "git",
